accounts/conprodwsjapac/tokyo/tko-web.tf
resource "aws_eip" "tko-rc-web-eip" {
  count = 2 
  vpc  = true
}

resource "aws_eip_association" "tko-rc-web-eip-assoc" {
  count		= 2 
  instance_id   = element(aws_instance.tko-rc-web.*.id, count.index)
  allocation_id = element(aws_eip.tko-rc-web-eip.*.id, count.index)
}

resource "aws_key_pair" "tko_rc_web_key" {
  key_name   = "tko_rc_web_key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDvFIrPz7DNwnVVl3XKd6trWoaRhIpo4xLYQO9G00PmWkRpssDZuDGwEeyVnGkV2R3h56ojIcQxeRa74s16+Drpu6Gf8OcbQvI0M+Z1EGVCd+R/DMxBfNGBJt33t1FIAh+xnqF5XxFdqvGpHKeLsHAEZs7zNAZHO09g6OSL5ivisjGIpOqyL3W2NGljj2ihYTYP3lr5TG52Gw5jpbXEtHTP+KHODfZxh79shFbo/q5aD11rU3sgMTO4jQIks0R5e4nzLcajG3kBVqcFfLX68cyT4ZWMQ4h21rdmUmgC2ZtNcMMtigANRvV86wCDcA3MgfJnnH+Eq9brGf+wZvlIfpxv6rTk9FisRx3ikBQNWNLvFYw+pHKLR61UWKBwoAUx1NRcdH/8qpjroyWADIVAffNcOXADSONuEep3b2ZWQatYoj6ZNDnTuOnC7qfm2hMt [...]
}

data "aws_ami" "tko_rc_web_image" {
  owners   = ["528339170479"]  
  filter {
    name   = "name"
    values = ["amigo-centos-7-dowjones-base-202010190921"]
  }
}

data "aws_security_group" "djif-default-web" {
    filter {
        name = "group-name"
        values = ["djif_default"] 
    }
}

resource "aws_security_group" "djif-rc-web-sg" {
  name        = "djif-rc-web-sg"
  description = "djif-rc-web-sg"

  vpc_id      = var.vpc_id

  //IP-6495

  // Web Access 80
  ingress {
    description = "Web Access 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Web Access 443
  ingress {
    description = "Web Access 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // SSH Access
  ingress {
    description = "SSH Access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.197.242.0/23", "10.197.244.0/23", "10.169.146.0/23", "10.169.148.0/23", "113.43.214.99/32", "205.203.99.34/32", "205.203.99.41/32", "203.116.229.70/32", "202.106.222.158/32"]
  }

   ingress {
    description = "FTP Access"
    from_port   = 21
    to_port     = 21
    protocol    = "tcp"
    cidr_blocks = ["10.167.16.34/32", "10.167.16.226/32", "10.167.16.181/32", "10.167.16.250/32"]
  }

  // ICMP 
  ingress {
    description = "ICMP"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["10.0.0.0/8"]
  }

  // SMTP
  egress {
    description = "ICMP"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["10.167.16.249/32","10.167.16.48/32","10.167.16.169/32","10.167.16.38/32","10.167.16.4/32","10.167.16.74/32","10.167.16.70/32" ]
  }

  // ICMP 
  egress {
    description = "ICMP"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["10.0.0.0/8"]
  }

  // Internet Access 80
  egress {
    description = "Internet Access 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Internet Access 443
  egress {
    description = "Internet Access 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    preserve = "true"
  }
}

resource "aws_instance" "tko-rc-web" {
    count		   = 2 
    ami                    = "${data.aws_ami.tko_rc_web_image.image_id}"
    instance_type          = "${var.tko_rc_web_instance_type}"
    key_name               = "${aws_key_pair.tko_rc_web_key.id}" 
    subnet_id              = "${var.tko_rc_web_subnet_id}" 
    vpc_security_group_ids = ["${data.aws_security_group.djif-default-web.id}","${aws_security_group.djif-rc-web-sg.id}"]

    root_block_device {
        volume_size = "${var.root_v_size}"
        volume_type = "${var.root_v_type}"
    }

    tags = {
        Name        = "${var.tko_rc_web_name}${count.index + 1}" 
        bu          = "${var.TagBU}"
        owner       = "${var.TagOwner}"
        environment = "${var.TagEnv}"
        product     = "${var.TagProduct}"
        component   = "${var.TagComponent}"
        servicename = "${var.TagServiceName}"
        appid       = "${var.appid}"       
        preserve    = true
    }
}
